--- a/src/css/style.css
+++ b/src/css/style.css
@@ -192,6 +192,10 @@ a {
     border-bottom: 0;
 }
 
+.btnSocial{
+    color: white !important;
+}
+
 .header .dropdown-item span {
     position: absolute;
     right: 20px;
@@ -834,6 +838,10 @@ div.tab button:hover {
     width: 100%;
     position: relative;
     margin: 1rem 0 0;
+}
+
+.btn {
+    color: white !important;
 }
 
 .gp-button.btn-primary:hover,
@@ -1621,7 +1629,7 @@ hr.invis3 {
 .loader {
     display: block;
     margin: 20px auto 0;
-    vertical-align: middle;
+    
 }
 
 #preloader {
